edge detection notebook tweak

--- a/projects/02.Images/Edge Detection.ipynb
+++ b/projects/02.Images/Edge Detection.ipynb
@@ -211,12 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "twitter = Image.open('data/twitter.bmp')\n",
     "# harder: graybear = bear.convert('L')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code"
    ]
   },
   {
