--- a/projects/03.Audio/making_noise.ipynb
+++ b/projects/03.Audio/making_noise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Audio Processing\n",
     "\n",
-    "Colin Jemmott for UC San Diego, September 2018\n",
+    "Thanks to Colin Jemmott.\n",
     "\n",
     "Today we will learn:\n",
     "\n",
