a few extra hints

--- a/projects/03.Audio/making_noise.ipynb
+++ b/projects/03.Audio/making_noise.ipynb
@@ -55,6 +55,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our sine wave is \n",
+    "\n",
+    "$\\sin\\left(2\\pi ft\\right)$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "* $f$ is our frequency, and\n",
+    "* $t$ is the list of times, in seconds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plotting helps visualize the sound:\n",
     "* x-axis: time (or sample #)\n",
     "* y-axis: amplitude"
@@ -104,11 +118,11 @@
     "\n",
     "# Amplitude\n",
     "\n",
-    "What happens if you make the line\n",
-    "```\n",
-    "scaled = np.int16(wave/np.max(np.abs(wave)) * 32767)\n",
-    "```\n",
-    "one tenth as large? (Plot the resulting wave, write it to file, and listen!)"
+    "What happens if you make the tone one tenth as large for every sample?  So our new sine wave would be\n",
+    "\n",
+    "$\\frac{1}{10} \\sin\\left(2\\pi ft\\right)$\n",
+    "\n",
+    "(Plot the resulting wave, write it to file, and listen!)"
    ]
   },
   {
@@ -124,7 +138,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now what if you multiply it by a linear ramp, starting at 0 and ending at 1?\n",
+    "Next, what if you multiply it by a linear ramp, starting at 0 and ending at 1?\n",
+    "\n",
+    "$A(t) \\sin\\left(2\\pi ft\\right)$\n",
+    "\n",
+    "where the amplitude linearly changes from\n",
+    "\n",
+    "$A(0) = 0$ to $A(t_{max}) = 1$\n",
     "\n",
     "*Hint:* use `np.arange`."
    ]
@@ -146,12 +166,47 @@
     "\n",
     "Let's try a different signal.  Make a two second recording of random noise using\n",
     "```\n",
-    "np.random.normal(mean, stdev, N)\n",
+    "np.random.randn(N_max)\n",
     "```\n",
     "What does that sound like?\n",
     "What if you add the random noise to your sine wave above?\n",
     "\n",
     "Don't forget to scale it to wave standard!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding Sounds\n",
+    "\n",
+    "Since our random noise and sine wave, we can add them by adding together each element of the list.  As always, listen!  Does it sound like what you expected?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Concatenating Sounds\n",
+    "Rather than adding each element of the noise and sine wave, instead make them into one list by concatenating them."
    ]
   },
   {
@@ -207,7 +262,6 @@
     "* What happens if you invert it?  \n",
     "* Make a maximum and minimum threshold?  \n",
     "* Remove all the small numbers?  \n",
-    "* Add two sound waves?\n",
     "* Can you make each note decay?\n",
     "\n",
     "Wrap these in functions that you can apply to single notes that you can use to piece together a song.\n",
