add imports to notebook

--- a/projects/05.AB_Testing/AB_Testing.ipynb
+++ b/projects/05.AB_Testing/AB_Testing.ipynb
@@ -17,6 +17,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% matplotlib inline\n",
+    "\n",
+    "from datascience import *\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
