add a n_sample term

--- a/projects/04.Text/processing_text.ipynb
+++ b/projects/04.Text/processing_text.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +240,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/afraenkel/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from nltk import tokenize"
+    "from nltk import tokenize\n",
+    "import nltk\n",
+    "nltk.download('punkt')"
    ]
   },
   {
@@ -300,21 +321,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     /Users/afraenkel/nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('vader_lexicon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/afraenkel/anaconda/lib/python3.6/site-packages/nltk/twitter/__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
+      "  warnings.warn(\"The twython library has not been installed. \"\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'neg': 0.0, 'neu': 0.239, 'pos': 0.761, 'compound': 0.4926}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sid = SentimentIntensityAnalyzer()\n",
     "sid.polarity_scores(\"Good test!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets = Table.read_table('data/UCSD tweets.csv')\n",
+    "tweetList = tweets.column('text') # a list of strings, with each string a tweet"
    ]
   },
   {
@@ -325,11 +404,85 @@
    "source": [
     "tweetSentiments = []\n",
     "\n",
-    "for tweet in tweetDf['text']:\n",
+    "for tweet in tweetList:\n",
     "    tweetSentiment = sid.polarity_scores(tweet)\n",
     "    tweetSentiment['text'] = tweet\n",
     "    tweetSentiments.append(tweetSentiment)\n",
-    "tweetSentimentDf = pd.DataFrame.from_records(tweetSentiments)"
+    "    \n",
+    "tweetSentiments # a list of dictionaries, with text of tweets and sentiments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>compound</th> <th>neg</th> <th>neu</th> <th>pos</th> <th>text</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0.6369  </td> <td>0    </td> <td>0.682</td> <td>0.318</td> <td>UCSD ranked 7th best school in US by Washington Monthly     </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>-0.4215 </td> <td>0.237</td> <td>0.763</td> <td>0    </td> <td>it physically pains me that UCSD doesn’t have a football ...</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0       </td> <td>0    </td> <td>1    </td> <td>0    </td> <td>A card mis-judged a parking space and over-ran a parking ...</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0.8659  </td> <td>0    </td> <td>0.72 </td> <td>0.28 </td> <td>Almost 50% increase in #PedsICU engagement from last wee ...</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0.0772  </td> <td>0    </td> <td>0.954</td> <td>0.046</td> <td>here’s a tinge of classism in saying SDSU should make do ...</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0.4588  </td> <td>0    </td> <td>0.885</td> <td>0.115</td> <td>This past weekend we observed the 25th anniversary of th ...</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>-0.6801 </td> <td>0.424</td> <td>0.443</td> <td>0.133</td> <td>I HATE UCSD SO MUCH THEYRE SO ANNOYING OHHHHH MY GOD        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>-0.5319 </td> <td>0.231</td> <td>0.657</td> <td>0.112</td> <td>LMFAOOO UCSD JUST CALLED ME ASKING IF I COULD MAKE A $25 ...</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0.6369  </td> <td>0    </td> <td>0.682</td> <td>0.318</td> <td>I chose UCSD because it has the best fb meme group          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0.34    </td> <td>0    </td> <td>0.789</td> <td>0.211</td> <td>High key excited to be going back to UCSD 💙💛                </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (30 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "compound | neg   | neu   | pos   | text\n",
+       "0.6369   | 0     | 0.682 | 0.318 | UCSD ranked 7th best school in US by Washington Monthly\n",
+       "-0.4215  | 0.237 | 0.763 | 0     | it physically pains me that UCSD doesn’t have a football ...\n",
+       "0        | 0     | 1     | 0     | A card mis-judged a parking space and over-ran a parking ...\n",
+       "0.8659   | 0     | 0.72  | 0.28  | Almost 50% increase in #PedsICU engagement from last wee ...\n",
+       "0.0772   | 0     | 0.954 | 0.046 | here’s a tinge of classism in saying SDSU should make do ...\n",
+       "0.4588   | 0     | 0.885 | 0.115 | This past weekend we observed the 25th anniversary of th ...\n",
+       "-0.6801  | 0.424 | 0.443 | 0.133 | I HATE UCSD SO MUCH THEYRE SO ANNOYING OHHHHH MY GOD\n",
+       "-0.5319  | 0.231 | 0.657 | 0.112 | LMFAOOO UCSD JUST CALLED ME ASKING IF I COULD MAKE A $25 ...\n",
+       "0.6369   | 0     | 0.682 | 0.318 | I chose UCSD because it has the best fb meme group\n",
+       "0.34     | 0     | 0.789 | 0.211 | High key excited to be going back to UCSD 💙💛\n",
+       "... (30 rows omitted)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Table.from_records(tweetSentiments)"
    ]
   },
   {
