--- a/projects/05.AB_Testing/AB_Testing.ipynb
+++ b/projects/05.AB_Testing/AB_Testing.ipynb
@@ -148,8 +148,23 @@
     "It's potentially quite costly to show the new webpage to a large number of users, given that the proposed change may be ineffective. One way to mitigate this risk is to shrink the treatment group. However, this decision is a trade-off for noisier results.\n",
     "\n",
     "* How big *does* our sample need to be?\n",
-    "    - We'll learn the vocabulary for this soon\n",
-    "    - For a nice dashboard calculator: https://www.evanmiller.org/ab-testing/sample-size.html"
+    "\n",
+    "$$ n = 16\\sigma^2/\\Delta^2 $$\n",
+    "\n",
+    "Where: $\\sigma^2$ is the variance of the outcome metric \n",
+    "* in case of binary outcome, $\\sigma^2 = p(1-p)$, where $p$ is the probability $X = 1$.\n",
+    "*  $\\Delta$ is the sensitivity (amount you want to detect) at 80% power -- i.e. the difference in ($p_1 - p_2$). This parameter is based on how small of a variation you would like to meaningfully detect.\n",
+    "\n",
+    "* For a nice dashboard calculator: https://www.evanmiller.org/ab-testing/sample-size.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
    ]
   },
   {
