add hypoth testing question

--- a/projects/05.AB_Testing/MultiArmedBandits.ipynb
+++ b/projects/05.AB_Testing/MultiArmedBandits.ipynb
@@ -335,6 +335,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code Here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -393,6 +402,13 @@
    "outputs": [],
    "source": [
     "# Code Here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: Suppose you have 10 potential new ads to show users and you'd like to test them using the UCB strategy in order to pick the best performer. Describe a procedure for running and evaluating the test. Make sure the valuation can distinguish signal from noise!"
    ]
   },
   {
